yaml-tests/src/test/resources/include-block/shouldPass/include-prioritize-local-uri.yamsql
#
# include-prioritize-local-uri.yamsql
#
# This source file is part of the FoundationDB open source project
#
# Copyright 2021-2026 Apple Inc. and the FoundationDB project authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This test should pass. The included yamsql has a schema template defined, so the tests in that file connect to the
# database defined on that (locally defined) schema template. While the tests in this file connect to the database
# defined on the schema template of this file.
---
schema_template:
    create table t1(id bigint, col1 bigint, primary key(id))
---
setup:
  connect: 1
  steps:
    - query: INSERT INTO t1 VALUES (10, 20), (30, 40), (50, 60), (70, 80)
---
include:
    include-block/includes/include-scoped.yamsql
---
test_block:
  name: transactions-tests
  tests:
    -
      - query: select * from t1
      - result: [
        {id: 10, col1: 20},
        {id: 30, col1: 40},
        {id: 50, col1: 60},
        {id: 70, col1: 80}]
...
