yaml-tests/src/test/resources/include-block/shouldFail/verify-all-includes-execute.yamsql
#
# verify-all-includes-execute.yamsql
#
# This source file is part of the FoundationDB open source project
#
# Copyright 2021-2026 Apple Inc. and the FoundationDB project authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This yamsql file should fail. It includes a file that tries to insert a row to the table. Then tests that the new
# row is actually inserted. When trying to include that file again - that should fail as the row is already inserted.
# As a takeaway, this also verifies that an include can use to populate data to the table.
---
schema_template:
    create table t1(id bigint, col1 bigint, primary key(id))
---
setup:
  connect: (global) 1
  steps:
    - query: INSERT INTO t1 VALUES (10, 20), (30, 40), (50, 60), (70, 80)
---
# adds a new row (90, 100)
include:
    include-block/includes/include-setup-insert.yamsql
---
# verify that the previous include succeeded in putting to the table.
---
test_block:
  tests:
    -
      - query: select * from t1
      - result: [{10, 20}, {30, 40}, {50, 60}, {70, 80}, {90, 100}]
---
# tries to add the same row again, but fails
include:
    include-block/includes/include-setup-insert.yamsql
...
